Bug 70873 - Weston crashes when waking from sleep/idle
Summary: Weston crashes when waking from sleep/idle
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-25 20:16 UTC by U. Artie Eoff
Modified: 2013-10-31 19:01 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gdb backtrace (17.52 KB, text/plain)
2013-10-25 20:16 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2013-10-25 20:16:29 UTC
Created attachment 88123 [details]
gdb backtrace

Weston crashes when waking up from sleep/idle state.

1. Execute 'weston-launch -- -i5'
2. Let weston go to sleep/idle
3. Move mouse to wake-up weston
4. Observer weston crash

wayland (master) heads/master-0-g16b2dab
drm (master) 2.4.47-0-g951ebe0
mesa (master) heads/master-0-g9807556
libva (master) heads/master-0-g73a11b3
intel-driver (master) heads/master-0-g01b39f7
weston (master) heads/master-0-gc85f1d4

Note: this does *not* happen on 1.3 branch
Comment 1 Kristian Høgsberg 2013-10-30 22:50:44 UTC
commit aa2ee8bdf6ad2709bfb4afadcb100a7d6361fb9a
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Oct 30 15:49:45 2013 -0700

    shell: Create view for lock surface
    
    Nothing created the view for the lock surface and weston would crash
    when trying to display it.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=70873


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.